accessibility fix-1: color contrast

--- a/src/pages/home/popular-work-section/popular-work-section.css
+++ b/src/pages/home/popular-work-section/popular-work-section.css
@@ -28,6 +28,7 @@
   text-align: center;
   letter-spacing: 1px;
   text-transform: uppercase;
+  font-weight: bold;
 }
 
 .popular-pens .popular-pen {
@@ -48,7 +49,6 @@
 }
 
 .popular-pen-title {
-  color: initial;
   margin-bottom: 0.8rem;
 }
 
